package com.directi.training.isp.exercise;

public interface ISensingObject {
    void proximityCallback();
}
