package com.directi.training.isp.exercise;

public interface ITimedObject {
    void timeOutCallback();
}
